[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hextraj = ["data/**/*"]

[tool.setuptools_scm]

[project]
name = "hextraj"
dynamic = ["version"]
description = "Hex labelling of trajectory data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Willi Rath", email = "wrath@geomar.de" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyproj",
    "xarray",
    "geopandas",
    "shapely",
]

[project.optional-dependencies]
full = ["dask", "scipy", "cartopy"]
dev  = ["hextraj[full]", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/willirath/hextraj"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["src/hextraj/redblobhex\\.py", "src/hextraj/redblobhex_array\\.py"]

[tool.isort]
known_third_party = ["dask", "geopandas", "numpy", "pandas", "pyproj", "pytest", "setuptools", "shapely", "xarray"]
